--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -22,13 +22,13 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/favicon_io/site.webmanifest">
+    <link rel="manifest" href="/static/favicon_io/site.webmanifest">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
 <body>
     <header id="header">
@@ -39,7 +39,7 @@
             </a>
         </div>
         <div class="toggle-header">
-            <a class="header-link" href="index.html">
+            <a class="header-link" href="/">
                 <h1 class="header-name d-md-none">Mhairi Todd</h1>
             </a>
             <div class="nav-toggle">
@@ -50,11 +50,11 @@
         <nav class="nav">
             <ul>
                 <li class="nav-item nav-close"><svg class="svg-close" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"><path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"/></svg></li>
-                <li class="nav-item rob-font"><a href="index.html">Home</a></li>
-                <li class="nav-item rob-font"><a href="about.html">About</a></li>
-                <li class="nav-item rob-font"><a href="services.html">Services</a></li>
-                <li class="nav-item rob-font"><a href="testimonials.html">Testimonials</a></li>
-                <li class="nav-item rob-font"><a href="contact.html">Contact</a></li>
+                <li class="nav-item rob-font"><a href="/">Home</a></li>
+                <li class="nav-item rob-font"><a href="/about">About</a></li>
+                <li class="nav-item rob-font"><a href="/services">Services</a></li>
+                <li class="nav-item rob-font"><a href="/testimonials">Testimonials</a></li>
+                <li class="nav-item rob-font"><a href="/contact">Contact</a></li>
                 <li class="nav-item social-nav">
                     <span class="social-nav-item">
                         <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank">
@@ -80,7 +80,7 @@
     <!-- logo on mobile -->
     <div class="logo-xs-container d-md-none">
         <div class="header-xs-logo">
-            <a class="header-link" href="index.html">
+            <a class="header-link" href="/">
                 <h1 class="logo-1 mb-1">Mhairi Todd</h1>
                 <h2 class="logo-subtitle mb-0">Revolve Coaching</h2>
             </a>
@@ -119,19 +119,19 @@
                     </div>
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/feel-garden-comp2.jpg" alt="mhairi-life-coach-instagram-feel">
+                    <img src="/static/img/insta/feel-garden-comp2.jpg" alt="mhairi-life-coach-instagram-feel">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/sunday-comp2.jpg" alt="mhairi-life-coach-instagram-sunday">
+                    <img src="/static/img/insta/sunday-comp2.jpg" alt="mhairi-life-coach-instagram-sunday">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/believe-comp2.jpg" alt="mhairi-life-coach-instagram-believe">
+                    <img src="/static/img/insta/believe-comp2.jpg" alt="mhairi-life-coach-instagram-believe">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/succeed-comp2.jpg" alt="mhairi-life-coach-instagram-suceed">
+                    <img src="/static/img/insta/succeed-comp2.jpg" alt="mhairi-life-coach-instagram-suceed">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/mindest-comp2.jpg" alt="mhairi-life-coach-instagram-mindset">
+                    <img src="/static/img/insta/mindest-comp2.jpg" alt="mhairi-life-coach-instagram-mindset">
                 </div>
             </div>
             <!-- END: latest instagram posts -->
@@ -180,6 +180,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!--  script -->
-    <script src="static/js/main.js"></script>
+    <script src="/static/js/main.js"></script>
 </body>
 </html>
