--- a/src/site/contact.njk
+++ b/src/site/contact.njk
@@ -62,7 +62,7 @@ layout: 'base.njk'
             </div>
         </div>
         <div class="contact-form-img">
-            <img src="static/img/Mhairi_pics/coat-pull-comp.jpg" alt="mhairi-life-coach-in-coat">
+            <img src="/static/img/Mhairi_pics/coat-pull-comp.jpg" alt="mhairi-life-coach-in-coat">
         </div>
     </section>
     <!-- END: contact form section -->
@@ -131,69 +131,8 @@ layout: 'base.njk'
     </section>
     <!-- END: FAQ -->
 
-    <!-- quiz section -->
-    <section class="quiz-section">
-        <!-- First quiz CTA section -->
-        <div id="quizCta" class="">
-            <h2 class="quiz-title sect-title">
-                The coaching  
-            </h2>
-            <h3 class="quiz-font logo-font">
-                Quiz
-            </h3>
-            <div class="quiz-cta-content">
-                <h4 id="quizResult" class="quiz-content-title sect-title">
-                    Find out if coaching is for you in less than 60 seconds
-                </h4>
-                <div class="quiz-cta">
-                    <a id="quizIntroBtn" href="" class="quiz-cta-btn btn-black normal-text">Tell me more</a>
-                </div>
-            </div>  
-        </div>
+    {% include 'components/_quiz.njk' %}
 
-        <!-- Second quiz intro section -->
-        <div id="quizIntro" class="quiz-intro quiz-cta-content">
-            <h2 class="quiz-title sect-title">
-                The coaching <span class="logo-font">quiz</span>
-            </h2>
-            <p id="quizIntroText" class="quiz-content-main normal-text">
-                Believe it or not, Transformation coaching is not for everyone. There are some 
-                who would really benefit from a coach, but they just aren't ready to make the changes to better their lives. 
-                Take this quick quiz to see if Transformation Coaching is right for you right now. 
-            </p>
-            <div class="quiz-cta">
-                <a id="quizStart" href="" target="_blank" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
-            </div>
-        </div>   
-
-        <!-- Third quiz Quiz section -->
-        <div id="quiz" class="quiz-item">
-            <h2 class="quiz-title sect-title">
-                The coaching <span class="logo-font">quiz</span>
-            </h2>
-            <div class="question-number normal-text"><i>Question <span id="questionNumber"></span></i></div>
-            <div id="question" class="normal-text quiz-label"></div> 
-            <div class="options">
-                <button id="choiceTrue" class="option-btn btn-white-sm">True</button>
-                <button id="choiceFalse" class="option-btn btn-white-sm">False</button>
-            </div>
-        </div>
-    </section>
-    <!-- END: quiz section -->
-
-    <!-- Parralex services section -->
-    <section class="services-cta">
-        <div class="parallax-container"></div>
-        <div class="services-cta-content">
-            <h2 class="cta-title">
-                Get ready to start living
-            </h2>
-            <h3 class="cta-subtitle">
-                The life of your dreams.
-            </h3>
-            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank">Book in your free clarity call</a>
-        </div>
-    </section>
-    <!-- END: parralex services section -->
+    {% include 'components/_services-parralax.njk' %}
     
     
