--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/src/static/favicon_io/site.webmanifest">
+    <link rel="manifest" href="/static/favicon_io/site.webmanifest">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -33,7 +33,7 @@
 <body>
     <header id="header">
         <div class="header-logo d-none d-md-block">
-            <a class="header-link" href="index.html">
+            <a class="header-link" href="/">
                 <h1 class="logo-1 mb-1">Mhairi Todd</h1>
                 <h2 class="logo-subtitle mb-0">Revolve Coaching</h2>
             </a>
