--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -19,10 +19,10 @@
     <title>Mhairi Todd - Revolve Coaching</title>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/static/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_ico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_ico/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_ico/manifest.json">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
