Add new nav content

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -51,13 +51,13 @@
             <ul>
                 <li class="nav-item nav-close"><svg class="svg-close" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"><path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"/></svg></li>
                 <li class="nav-item rob-font"><a href="/">Home</a></li>
-                <li class="nav-item rob-font"><a href="/about">About</a></li>
-                <li class="nav-item rob-font"><a href="/services">Services</a></li>
-                <li class="nav-item rob-font"><a href="/testimonials">Testimonials</a></li>
-                <li class="nav-item rob-font"><a href="/contact">Contact</a></li>
+                <li class="nav-item rob-font"><a href="/about">Meet Mhairi</a></li>
+                <li class="nav-item rob-font"><a href="/services">Coaching Programs</a></li>
+                <li class="nav-item rob-font"><a href="/testimonials">Client Love</a></li>
+                <li class="nav-item rob-font"><a href="/contact">Let's Chat</a></li>
                 <li class="nav-item social-nav">
                     <span class="social-nav-item">
-                        <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank">
+                        <a href="https://www.instagram.com/theroadblockcoach/?hl=en" target="_blank">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </span>
@@ -104,7 +104,7 @@
                         Or pretty pictures at the very least! 
                     </p>
                     <div class="about-cta-btn cf-button">
-                        <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank" class="btn-pink normal-text">Join my tribe!</a>
+                        <a href="https://www.instagram.com/theroadblockcoach/?hl=en" target="_blank" class="btn-pink normal-text">Join my tribe!</a>
                     </div>
                 </div>
             </div>
