--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1477,19 +1477,20 @@ footer {
   background: #fbf2ec;
   color: 0;
   cursor: pointer;
-  right: -25rem;
+  right: -23rem;
   padding: 1em 2em 1em 2em;
   position: fixed;
   top: 15px;
-  height: 23em;
-  width: 18em;
+  height: 24em;
+  width: 20em;
   z-index: 99;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
   .nav {
-    height: 21em;
-    width: 16em;
+    height: 22em;
+    width: 19em;
+    padding: 1em 1em 1em 2em;
   }
 }
 
@@ -1502,15 +1503,15 @@ footer {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .nav {
     height: 19.5em;
-    width: 14em;
+    width: 16.5em;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .nav {
     padding: 1em 2em .6em 1.5em;
-    height: 17em;
-    width: 12.5em;
+    height: 18.5em;
+    width: 15em;
   }
 }
 
@@ -1518,15 +1519,15 @@ footer {
   .nav {
     padding: 1em 1em .8em 1.3em;
     height: 16em;
-    width: 11em;
+    width: 14em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .nav {
-    padding: 1em 1em .8em 1em;
+    padding: 1em 1em .5em 1em;
     height: 14em;
-    width: 9em;
+    width: 12em;
   }
 }
 
@@ -1809,7 +1810,19 @@ footer {
 
 .social-nav-item {
   margin: .5em;
-  font-size: 1.3em;
+  font-size: 1.4em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .social-nav-item {
+    font-size: 1.6em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .social-nav-item {
+    font-size: 1.6em;
+  }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -1835,7 +1848,13 @@ footer {
   position: absolute;
   width: 100%;
   text-align: center;
-  bottom: 5px;
+  bottom: .5em;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
+  .social-nav {
+    bottom: .5em;
+  }
 }
 
 a:focus {
@@ -3150,6 +3169,7 @@ input[type='checkbox'] {
 
 .home-hero-text {
   font-family: "biko", serif;
+  overflow-x: hidden;
 }
 
 @media only screen and (max-width: 500px), only screen and (min-width: 500px) and (max-width: 767px) {
@@ -6257,6 +6277,7 @@ input[type='checkbox'] {
 
 .home-hero-text {
   font-family: "biko", serif;
+  overflow-x: hidden;
 }
 
 @media only screen and (max-width: 500px), only screen and (min-width: 500px) and (max-width: 767px) {
