--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -20,6 +20,15 @@ layout: 'base.njk'
 </section>
 <!-- END: hero section -->
 
+<!-- hero section -->
+<div class="home-sub-hero">
+    <div class="home-sub-hero-content">
+        <h1 class="about-title">From roadblock to revolution</h1>
+        <h2 class="sect-title fw-n">Helping women create a life without limits</h2>
+    </div>
+</div>
+<!-- END: hero section -->
+
 <!-- Home about section -->
 <section class="home-about">
     <div class="home-about-title">
