--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -13,9 +13,11 @@ layout: 'base.njk'
         <img src="static/img/Mhairi_pics/home_hero_2_comp.jpg" class="home-hero-2" alt="mhairi-life-coach-walking-towards">
     </div>
     <div class="home-hero-text">
-        <p class="first-hero-text" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1500">Revolutionise</p>
-        <p class="second-hero-text" data-aos="fade-left" data-aos-delay="1000" data-aos-offset="200" data-aos-duration="1500">your life from the</p>
-        <p class="logo-sub third-hero-text" data-aos="fade-right" data-aos-delay="2000" data-aos-offset="200" data-aos-duration="1500">Inside out</p>
+        <p class="hero-text first-hero-text" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1500">From roadblock</p>
+        <p class="hero-text second-hero-text" data-aos="fade-left" data-aos-delay="1000" data-aos-offset="200" data-aos-duration="1500">to revolution</p>
+        {# <p class="hero-text third-hero-text" data-aos="fade-right" data-aos-delay="2000" data-aos-offset="200" data-aos-duration="1500">helping women create</p>
+        <p class="hero-text third-hero-text" data-aos="fade-right" data-aos-delay="2000" data-aos-offset="200" data-aos-duration="1500">a life without limits
+        </p> #}
     </div>
 </section>
 <!-- END: hero section -->
@@ -23,8 +25,9 @@ layout: 'base.njk'
 <!-- hero section -->
 <div class="home-sub-hero">
     <div class="home-sub-hero-content">
-        <h1 class="about-title">From roadblock to revolution</h1>
-        <h2 class="sect-title fw-n">Helping women create a life without limits</h2>
+        {# <h1 class="about-title">From roadblock to revolution</h1> #}
+        <h1 class="about-title">Helping women create a life without limits</h1>
+        {# <h2 class="sect-title fw-n">Helping women create a life without limits</h2> #}
     </div>
 </div>
 <!-- END: hero section -->
