--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -11,7 +11,7 @@
     }
     @media #{$breakpoint-xs} {
         position: relative;
-        height: 42em;
+        height: 37em;
     }
     @media #{$breakpoint-sm}{
         position: relative;
@@ -135,7 +135,9 @@
     
 }
 
-
+.hero-text{
+    // font-size: .9em;
+}
 
 .home-hero-img{
     -webkit-transition: opacity 1s;
@@ -165,7 +167,7 @@
 
 .home-sub-hero{
     @media #{$breakpoint-xs}{
-        margin: 6.5em 1.5em;
+        margin: 3.5em 1.5em;
     }
     @media #{$breakpoint-sm}{
         width: 33em;
@@ -200,7 +202,7 @@
     }
     .about-title{
         @media #{$breakpoint-min-md}{
-            line-height: 2em;
+            line-height: 1.5em;
             font-size: 1.8em;
         }      
   
