Add new content to home about

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -37,7 +37,7 @@ layout: 'base.njk'
     <div class="home-about-title">
         <h1 class="logo-2">Hey, I'm Mhairi</h1>
         <h2 class="fw-b home-about-subtitle ml-1">
-            Transformation coach for talented women who want more from life. 
+            THE TRANSFORMATION COACH FOR WOMEN WHO WANT A LIFE WITHOUT LIMITS
         </h2>
     </div>
     <div class="home-about-img">
@@ -45,14 +45,16 @@ layout: 'base.njk'
     </div>
     <div class="home-about-text">
         <p class="normal-text">
-            I worked for many years in senior roles with fancy job titles and salaries, but I was never truly fulfilled.
+            I help women navigate and overcome the roadblocks in their lives. 
         </p>
         <p class="normal-text">
-            After completing a Medical Biology degree I knew my passion lay out with the lab.  But what to do? 
-            Youthful ignorance firmly in hand I gravitated to where I thought I ‘should’.  I was led by society’s depiction of success.  When I got there I realised I’d been so busy becoming what I thought I was supposed to that I’d completely lost touch with what I actually wanted.
+            From unlocking potential and gaining confidence to improving relationships and combating anxiety, my coaching programs help break down barriers standing between you and your personal version of true fulfillment.
         </p>
         <p class="normal-text">
-            What changed my world?  Complete disaster.  It was the best thing that happened to me.  Read more about my journey to happiness on my terms and how I can help you with yours.
+            You may not know all of the answers yet but together we dig deep to ask the questions, and build a bespoke plan centered around you. I approach all my sessions how I do life; with hard work, raw emotion and a hefty dose of humour. (That part is non-negotiable!)
+        </p>
+        <p class="normal-text">
+            The road to happiness exists, sometimes you just need a little help navigating it. That’s where I come in.
         </p>
     </div>
     <div class="about-cta-btn">
