--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -175,10 +175,10 @@
     }
     @media #{$breakpoint-md}{
         width: 33em;
-        margin: 4em auto 2em auto;
+        margin: 3em auto 2em auto;
     }
     @media #{$breakpoint-lg}{
-        width: 33em;
+        width: 30em;
         margin: 4em auto 2em auto;
     }
     @media #{$breakpoint-xl}{
@@ -204,6 +204,9 @@
         @media #{$breakpoint-min-md}{
             line-height: 1.5em;
             font-size: 1.8em;
+        }  
+        @media #{$breakpoint-lg}{
+            font-size: 1.6em;
         }      
   
     }
@@ -425,7 +428,7 @@
         }
     }
     @media #{$breakpoint-md} {
-        margin: 4em 0 3em 0;
+        margin: 2em 0 3em 0;
     }
     @media #{$breakpoint-lg} {
         grid-template-columns: auto 16em repeat(2, 12em) auto;
@@ -439,7 +442,7 @@
     }
     @media #{$breakpoint-xxl} {
         grid-template-columns:  auto 12em repeat(2, 12em) auto;
-        height: 23em;
+        height: 21em;
     }
 }
 
