Add new content home gain

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -15,9 +15,9 @@ layout: 'base.njk'
     <div class="home-hero-text">
         <p class="hero-text first-hero-text" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1500">From roadblock</p>
         <p class="hero-text second-hero-text" data-aos="fade-left" data-aos-delay="1000" data-aos-offset="200" data-aos-duration="1500">to revolution</p>
-        {# <p class="hero-text third-hero-text" data-aos="fade-right" data-aos-delay="2000" data-aos-offset="200" data-aos-duration="1500">helping women create</p>
+        <!-- <p class="hero-text third-hero-text" data-aos="fade-right" data-aos-delay="2000" data-aos-offset="200" data-aos-duration="1500">helping women create</p>
         <p class="hero-text third-hero-text" data-aos="fade-right" data-aos-delay="2000" data-aos-offset="200" data-aos-duration="1500">a life without limits
-        </p> #}
+        </p> -->
     </div>
 </section>
 <!-- END: hero section -->
@@ -25,9 +25,9 @@ layout: 'base.njk'
 <!-- hero section -->
 <div class="home-sub-hero">
     <div class="home-sub-hero-content">
-        {# <h1 class="about-title">From roadblock to revolution</h1> #}
+        <!-- {# <h1 class="about-title">From roadblock to revolution</h1> #} -->
         <h1 class="about-title">Helping women create a life without limits</h1>
-        {# <h2 class="sect-title fw-n">Helping women create a life without limits</h2> #}
+        <!-- {# <h2 class="sect-title fw-n">Helping women create a life without limits</h2> #} -->
     </div>
 </div>
 <!-- END: hero section -->
@@ -58,7 +58,7 @@ layout: 'base.njk'
         </p>
     </div>
     <div class="about-cta-btn">
-        <a href="about.html" class="btn-pink normal-text">Meet Mhairi</a>
+        <a href="about.html" class="btn-pink normal-text">READY TO BREAK BARRIERS? START HERE</a>
     </div>
 </section>
 <!-- END: Home about section -->
@@ -117,55 +117,82 @@ layout: 'base.njk'
 <section class="home-you-will-gain">
     <div class="home-gain-heading">
         <h2 class="logo-3">
-            Revolve Coaching
+            The Roadblock Coach
         </h2>
         <h3 class="sect-title rob-font">
-            This time is for you
+            LETTING GO OF LIMITATIONS
         </h3>
     </div>
     <div class="home-gain-content">
         <div class="home-gain-item" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000">
-            <h3 class="services-intro-subtitle rob-font">
-                Restore
-            </h3>
-            <p class="normal-text">
-                Self Awareness
+            <div class="gain-item-intro">
+                <h3 class="gain-intro-subtitle rob-font">
+                    Restore
+                </h3>
+                <p class="sect-subtitle">
+                    Change begins with you
+                </p>
+            </div>
+            <p class="normal-text gain-item-text">
+                YOUR AUTHENTIC SELF <br>
+                Discover what you really want and how to get it
+
             </p>
-            <p class="normal-text">
-                Confidence 
+            <p class="normal-text gain-item-text">
+                SELF AWARENESS <br>
+                Be present and learn to lean in to positive change
+
             </p>
-            <p class="normal-text">
-                Authenticity 
+            <p class="normal-text gain-item-text">
+                CONFIDENCE <br>
+                Gain a deep level of strength and courage 
+
             </p>
         </div>
         <hr class="half-width-hr pink-hr d-md-none">
         <div class="home-gain-item" data-aos="fade-right" data-aos-offset="150" data-aos-duration="1000" data-aos-delay="1000">
-            <h3 class="services-intro-subtitle rob-font">
-                Release
-            </h3>
-            <p class="normal-text">
-                Inner Critic
+            <div class="gain-item-intro">
+                <h3 class="gain-intro-subtitle rob-font">
+                    RELEASE
+                </h3>
+                <p class="sect-subtitle">
+                    Say your goodbyes
+                </p>
+            </div>
+            <p class="normal-text gain-item-text">
+                YOUR INNER CRITIC <br>
+                Switch the dialogue to one of self love
             </p>
-            <p class="normal-text">
-                Limiting Beliefs
+            <p class="normal-text gain-item-text">
+                LIMITING BELIEFS <br>
+                Start believing in what you’re capable of achieving
             </p>
-            <p class="normal-text">
-                Negative Patterns 
+            <p class="normal-text gain-item-text">
+                NEGATIVE PATTERNS <br>
+                Step out of the negative cycle to form healthy habits 
             </p>
         </div>
         <hr class="half-width-hr pink-hr d-md-none">
         <div class="home-gain-item" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000" data-aos-delay="1500">
-            <h3 class="services-intro-subtitle rob-font">
-                Reveal
-            </h3>
-            <p class="normal-text">
-                Future Focus
+            <div class="gain-item-intro">
+                <h3 class="gain-intro-subtitle rob-font">
+                    REVEAL
+                </h3>
+                <p class="sect-subtitle">
+                    Set your intentions
+                </p>
+            </div>
+            <p class="normal-text gain-item-text">
+                FUTURE FOCUS <br>
+                Gain the tools to keep toward your best life
             </p>
-            <p class="normal-text">
-                Personalised Life Plan
+            <p class="normal-text gain-item-text">
+                PERSONALISED ROAD MAP <br>
+                Set your gut-informed goals and stick to them
             </p>
-            <p class="normal-text">
-                Your Joy
+            <p class="normal-text gain-item-text">
+                YOUR TRUE JOY <br>
+                Start living the life you’ve imagined
             </p>
         </div>
     </div>
