--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1978,15 +1978,16 @@ a:focus {
 }
 
 .about-cta-btn {
-  height: 30px;
+  height: auto;
   margin: auto;
+  padding: .5em 1em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 12em;
+  width: auto;
   background-color: #f58c7c;
   color: white;
   -webkit-box-shadow: 3px 5px 9px -7px #3b403f;
@@ -1997,9 +1998,15 @@ a:focus {
   cursor: pointer;
 }
 
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .about-cta-btn {
+    margin: auto 2.5em;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .about-cta-btn {
-    width: 9em;
+    width: auto;
   }
 }
 
@@ -3834,7 +3841,7 @@ input[type='checkbox'] {
 }
 
 .home-gain-content {
-  width: 80vw;
+  width: 90vw;
   margin: 1em auto;
   position: relative;
 }
@@ -3875,14 +3882,14 @@ input[type='checkbox'] {
         -ms-grid-row-align: end;
         align-self: end;
     width: 31% !important;
-    padding: 0 .5em;
+    padding: 0 .8em;
   }
   .home-gain-item:nth-of-type(1):after, .home-gain-item:nth-of-type(2):after, .home-gain-item:nth-of-type(4):after, .home-gain-item:nth-of-type(5):after {
     content: "";
     background-color: #f58c7c;
     position: absolute;
     width: 2px;
-    height: 5em;
+    height: 10em;
     margin: auto;
     top: 0;
     bottom: 0;
@@ -3893,7 +3900,133 @@ input[type='checkbox'] {
 
 .home-gain-item .sect-subtitle {
   margin: .5em;
+}
+
+.gain-item-intro {
+  margin-bottom: 3em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .gain-item-intro {
+    font-size: 1.4em;
+    margin: 1em 1em 1.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .gain-item-intro {
+    margin-bottom: 2em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .gain-item-intro {
+    font-size: 1em;
+    margin: .5em 1em 1.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .gain-item-intro {
+    font-size: .9em;
+    margin: .5em 1em 1.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .gain-item-intro {
+    font-size: .8em;
+    margin: .5em 1em 1.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .gain-item-intro .sect-subtitle {
+    font-size: .8em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .gain-item-intro .sect-subtitle {
+    font-size: .9em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .gain-item-intro .sect-subtitle {
+    font-size: .8em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .gain-item-intro .sect-subtitle {
+    font-size: .8em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .gain-item-intro .sect-subtitle {
+    font-size: .8em;
+  }
+}
+
+.gain-intro-subtitle {
+  font-size: 1.2em;
+  font-family: "biko", serif;
   color: #f58c7c;
+  margin: 1em 1em 0.5em 1em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .gain-intro-subtitle {
+    font-size: 1.4em;
+    margin: 1em 1em 0.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .gain-intro-subtitle {
+    font-size: 1.1em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .gain-intro-subtitle {
+    font-size: 1em;
+    margin: .5em 1em 0.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .gain-intro-subtitle {
+    font-size: .9em;
+    margin: .5em 1em 0.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .gain-intro-subtitle {
+    font-size: .8em;
+    margin: .5em 1em 0.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .gain-item-text {
+    min-height: 4em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .gain-item-text {
+    min-height: 4em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .gain-item-text {
+    min-height: 5em;
+  }
 }
 
 .quote-parallax-container {
@@ -7001,7 +7134,7 @@ input[type='checkbox'] {
 }
 
 .home-gain-content {
-  width: 80vw;
+  width: 90vw;
   margin: 1em auto;
   position: relative;
 }
@@ -7042,14 +7175,14 @@ input[type='checkbox'] {
         -ms-grid-row-align: end;
         align-self: end;
     width: 31% !important;
-    padding: 0 .5em;
+    padding: 0 .8em;
   }
   .home-gain-item:nth-of-type(1):after, .home-gain-item:nth-of-type(2):after, .home-gain-item:nth-of-type(4):after, .home-gain-item:nth-of-type(5):after {
     content: "";
     background-color: #f58c7c;
     position: absolute;
     width: 2px;
-    height: 5em;
+    height: 10em;
     margin: auto;
     top: 0;
     bottom: 0;
@@ -7060,7 +7193,133 @@ input[type='checkbox'] {
 
 .home-gain-item .sect-subtitle {
   margin: .5em;
+}
+
+.gain-item-intro {
+  margin-bottom: 3em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .gain-item-intro {
+    font-size: 1.4em;
+    margin: 1em 1em 1.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .gain-item-intro {
+    margin-bottom: 2em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .gain-item-intro {
+    font-size: 1em;
+    margin: .5em 1em 1.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .gain-item-intro {
+    font-size: .9em;
+    margin: .5em 1em 1.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .gain-item-intro {
+    font-size: .8em;
+    margin: .5em 1em 1.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .gain-item-intro .sect-subtitle {
+    font-size: .8em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .gain-item-intro .sect-subtitle {
+    font-size: .9em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .gain-item-intro .sect-subtitle {
+    font-size: .8em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .gain-item-intro .sect-subtitle {
+    font-size: .8em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .gain-item-intro .sect-subtitle {
+    font-size: .8em;
+  }
+}
+
+.gain-intro-subtitle {
+  font-size: 1.2em;
+  font-family: "biko", serif;
   color: #f58c7c;
+  margin: 1em 1em 0.5em 1em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .gain-intro-subtitle {
+    font-size: 1.4em;
+    margin: 1em 1em 0.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .gain-intro-subtitle {
+    font-size: 1.1em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .gain-intro-subtitle {
+    font-size: 1em;
+    margin: .5em 1em 0.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .gain-intro-subtitle {
+    font-size: .9em;
+    margin: .5em 1em 0.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .gain-intro-subtitle {
+    font-size: .8em;
+    margin: .5em 1em 0.5em 1em;
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .gain-item-text {
+    min-height: 4em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .gain-item-text {
+    min-height: 4em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .gain-item-text {
+    min-height: 5em;
+  }
 }
 
 .quote-parallax-container {
