--- a/static/scss/components/_button.scss
+++ b/static/scss/components/_button.scss
@@ -94,7 +94,7 @@ a:focus{outline:0;}
         cursor: pointer;
     }
     height: auto;
-    margin: auto;
+    margin: auto 1.5em;
     padding: .5em 1em;
     display: flex;
     align-items: center;
